Configuracion inicial - Creacion de carpetas necesarias, Conexion de Base de Datos alojado en Soome.com y diseño de Login.

--- a/CreArte/appsettings.json
+++ b/CreArte/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefaultCreArteDB": "workstation id=CreArteDB.mssql.somee.com;packet size=4096;user id=johnychiroy_SQLLogin_1;pwd=w2wlzijw6v;data source=CreArteDB.mssql.somee.com;persist security info=False;initial catalog=CreArteDB;TrustServerCertificate=True;"
 }
