CRUD de Areas, Integracion de Alertas y Auditoria.

--- a/CreArte/appsettings.json
+++ b/CreArte/appsettings.json
@@ -6,5 +6,18 @@
     }
   },
   "AllowedHosts": "*",
-  "DefaultCreArteDB": "workstation id=CreArteDB.mssql.somee.com;packet size=4096;user id=johnychiroy_SQLLogin_1;pwd=w2wlzijw6v;data source=CreArteDB.mssql.somee.com;persist security info=False;initial catalog=CreArteDB;TrustServerCertificate=True;"
-}
+  "DefaultCreArteDB": "workstation id=CreArteDB.mssql.somee.com;packet size=4096;user id=johnychiroy_SQLLogin_1;pwd=w2wlzijw6v;data source=CreArteDB.mssql.somee.com;persist security info=False;initial catalog=CreArteDB;TrustServerCertificate=True;",
+
+  //"emailSettings": {
+  //  "Host": "smtp.gmail.com",
+  //  "Port": 587,
+  //  "EnableSSL": true,
+  //  "UserName": "creartemanualidades2021@gmail.com",
+  //  "Password": "yourpassword",
+  //  "From": "jd11chiroygmail.com"
+  //}
+
+  } 
+
+
+
