Formulario de Puestos - Crear, Editar, Visualizar, Eliminar. Aplicación de filtros, ordenamiento y búsqueda.

--- a/CreArte/appsettings.json
+++ b/CreArte/appsettings.json
@@ -8,16 +8,22 @@
   "AllowedHosts": "*",
   "DefaultCreArteDB": "workstation id=CreArteDB.mssql.somee.com;packet size=4096;user id=johnychiroy_SQLLogin_1;pwd=w2wlzijw6v;data source=CreArteDB.mssql.somee.com;persist security info=False;initial catalog=CreArteDB;TrustServerCertificate=True;",
 
-  //"emailSettings": {
+  //"Smtp": {
   //  "Host": "smtp.gmail.com",
   //  "Port": 587,
   //  "EnableSSL": true,
-  //  "UserName": "creartemanualidades2021@gmail.com",
-  //  "Password": "yourpassword",
-  //  "From": "jd11chiroygmail.com"
-  //}
+  //  "UserName": "jdavidcg117@gmail.com",
+  //  "Password": "qhwm cjpi qftl ufpp",
+  //  "From": "jdavidcg117@gmail.com",
+  //  "FromName": "CreArte Manualidades"
+  //},
 
-  } 
+  "App": {
+    "BaseUrl": "https://localhost:7123"
+    // Cambia a tu dominio público cuando publiques, p.ej. "https://crearte.mi-dominio.com"
+  }
+
+} 
 
 
 
