--- a/CreArte/appsettings.json
+++ b/CreArte/appsettings.json
@@ -6,24 +6,24 @@
     }
   },
   "AllowedHosts": "*",
-  "DefaultCreArteDB": "workstation id=CreArteDB.mssql.somee.com;packet size=4096;user id=johnychiroy_SQLLogin_1;pwd=w2wlzijw6v;data source=CreArteDB.mssql.somee.com;persist security info=False;initial catalog=CreArteDB;TrustServerCertificate=True;",
+  //"DefaultCreArteDB": "workstation id=CreArteDB.mssql.somee.com;packet size=4096;user id=johnychiroy_SQLLogin_1;pwd=w2wlzijw6v;data source=CreArteDB.mssql.somee.com;persist security info=False;initial catalog=CreArteDB;TrustServerCertificate=True;",
+  "DefaultCreArteDB": "workstation id=CreArteDB_P.mssql.somee.com;packet size=4096;user id=johnychiroy_SQLLogin_1;pwd=w2wlzijw6v;data source=CreArteDB_P.mssql.somee.com;persist security info=False;initial catalog=CreArteDB_P;TrustServerCertificate=True;",
 
-  //"Smtp": {
-  //  "Host": "smtp.gmail.com",
-  //  "Port": 587,
-  //  "EnableSSL": true,
-  //  "UserName": "jdavidcg117@gmail.com",
-  //  "Password": "qhwm cjpi qftl ufpp",
-  //  "From": "jdavidcg117@gmail.com",
-  //  "FromName": "CreArte Manualidades"
-  //},
+  "Mail": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSsl": true,
 
-  "App": {
-    "BaseUrl": "https://localhost:7123"
-    // Cambia a tu dominio público cuando publiques, p.ej. "https://crearte.mi-dominio.com"
+    "User": "jdavidcg117@gmail.com",
+    "Password": "qhwm cjpi qftl ufpp",
+
+    "FromAddress": "jdavidcg117@gmail.com",
+    "FromName": "CreArte Manualidades"
   }
 
-} 
+  //"App": {
+  //  "BaseUrl": "https://localhost:7123"
+  //  // Cambia a tu dominio público cuando publiques, p.ej. "https://crearte.mi-dominio.com"
+  //}
 
-
-
+}
