mejoras en vistas y lógica en todos los módulos

--- a/CreArte/appsettings.json
+++ b/CreArte/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   //"DefaultCreArteDB": "workstation id=CreArteDB.mssql.somee.com;packet size=4096;user id=johnychiroy_SQLLogin_1;pwd=w2wlzijw6v;data source=CreArteDB.mssql.somee.com;persist security info=False;initial catalog=CreArteDB;TrustServerCertificate=True;",
   "DefaultCreArteDB": "workstation id=CreArteDB_P.mssql.somee.com;packet size=4096;user id=johnychiroy_SQLLogin_1;pwd=w2wlzijw6v;data source=CreArteDB_P.mssql.somee.com;persist security info=False;initial catalog=CreArteDB_P;TrustServerCertificate=True;",
+  //"DefaultCreArteDB": "Server=EC2AMAZ-S6EEQC3\\SQLEXPRESS;Database=CreArteDB_P;User Id=sa;Password=Atriox.117;TrustServerCertificate=True;",
 
   "Mail": {
     "Host": "smtp.gmail.com",
